Voxel Remesher: Only "Vertex -> Color" color attributes are preserved #97164

Closed
opened 2022-04-08 12:56:22 +02:00 by Julien Kaspar · 4 comments
Member

System Information
Operating system: Linux-5.4.0-107-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-08 03:28, hash: ee292a1d66

Short description of error
This is related to the recent changes of D12587.
Any combination of data type "Color" and "Byte Color" and domain type "Vertex" and "Face Corner" are now part of the color attributes.
But when enabling the voxel remesher option to preserve color attributes, it only preserves "Vertex -> Color" color attributes.

Exact steps for others to reproduce the error

  • Enter sculpt mode
  • Create color attributes of each combination in the color attribute tab in the properties editor
  • Enable the voxel remesher option "Preserver -> Color Attribute" in the header to the right
  • Click on "Remesh"
  • See which color attributes are still there in the properties editor
**System Information** Operating system: Linux-5.4.0-107-generic-x86_64-with-glibc2.31 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.103.01 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-08 03:28, hash: `ee292a1d66` **Short description of error** This is related to the recent changes of [D12587](https://archive.blender.org/developer/D12587). Any combination of data type "Color" and "Byte Color" and domain type "Vertex" and "Face Corner" are now part of the color attributes. But when enabling the voxel remesher option to preserve color attributes, it only preserves "Vertex -> Color" color attributes. **Exact steps for others to reproduce the error** - Enter sculpt mode - Create color attributes of each combination in the color attribute tab in the properties editor - Enable the voxel remesher option "Preserver -> Color Attribute" in the header to the right - Click on "Remesh" - See which color attributes are still there in the properties editor
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 4a70561bbd

This issue was referenced by 4a70561bbdc97aa40c5817a573bf3515e3f95769
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-04-13 09:49:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97164
No description provided.