Fix T97164: Voxel remesh only supports vertex float             color attributes.

Voxel remesher now supports all color attribute
types.